# effective-mobile-fastapi-auth

./: .env.example  Dockerfile.api  README.md  docker-compose.yaml  fill_test_data.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_11_18_2033-441db0c6c094_initial_migration.py
app/: main.py
app/auth/: utils.py
app/cert/: jwt-private.pem  jwt-public.pem
app/core/: config.py  enums.py
app/db/: databse.py
app/models/: __init__.py  access_rule.py  role.py  user.py
app/repositories/: access_rule_repo.py  role_repo.py  user_repo.py
app/routes/: dependencies.py  mapper.py
app/routes/v1/: __init__.py  admin_acl.py  auth.py  users.py
app/schemas/: acl.py  auth.py  users.py
app/services/: acl_service.py  auth_service.py  user_service.py
